자기소개 파일을 만들어 보았다.

--- a/emit_test.html
+++ b/emit_test.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>채신기술!!!!</title>
+    <title>최신기술!!!!</title>
 </head>
 <body>
     vscode에서 느낌표! 누르면 기본틀을 1초만에 만들 수 있다!!!
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo amet aperiam corporis qui, rerum sequi expedita blanditiis adipisci!</P>
 </body>
 </html>
